fixed notation so it doesnt go off screen

--- a/src/Components/Notation.css
+++ b/src/Components/Notation.css
@@ -1,10 +1,11 @@
 .notation {
     display: flex;
-    height: 100%;
+    height: 90%;
     border: 2px solid var(--border);
     width: 25rem;
     background-color: var(--bg);
     flex-direction: column;
+    overflow-y: scroll;
 }
 .notation-row {
     display: flex;
